--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          components: fmt, clippy
+          components: rustfmt, clippy
 
       - name: Cache cargo builds
         uses: Swatinem/rust-cache@v2
