--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "welog_rs"
-version = "1.0.1+patch"
+version = "1.0.2"
 edition = "2024"
 description = "Structured logging with Elasticsearch sink and file fallback"
 license = "MIT"
